fix: sidebar toggler visibility

--- a/web/resources/css/sidebar.css
+++ b/web/resources/css/sidebar.css
@@ -1,11 +1,10 @@
-#sidebar.active {
-    margin-left: 0px;
-}
 #sidebar{
 	min-width: 250px;
 	max-width: 250px;
 	transition: all 0.3s;
-	margin-left: -250px;
+}
+#sidebarCollapse{
+    display: none;
 }
 @media (max-width: 768px) {
     #sidebar {
@@ -15,5 +14,8 @@
     }
     #sidebar.active {
         margin-left: 0;
+    }
+    #sidebarCollapse{
+        display: inline-block;
     }
 }
